# routes/api.php
@@ -11,6 +11,5 @@ Route::post('/register', [AuthController::class, 'register']);
 Route::post('/login', [AuthController::class, 'login']);
 
 Route::middleware('auth:sanctum')->group(function () {
-    Route::get('/download', [YoutubeDownloadController::class, 'download']);
     Route::post('/logout', [AuthController::class, 'logout']);
 });
